--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,22 +37,20 @@ stages:
 
     - publish: $(Build.ArtifactStagingDirectory)/app.zip
       artifact: drop
-
 - stage: Deploy
   dependsOn: Build
   condition: succeeded()
   jobs:
-  - deployment: DeployJob
-    environment: 'development'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - task: AzureWebApp@1
-            inputs:
-              azureSubscription: '$(azureServiceConnection)'
-              appType: 'webAppLinux'
-              appName: '$(webAppName)'
-              package: '$(Pipeline.Workspace)/drop/app.zip'
-              runtimeStack: 'PYTHON|$(python.version)'
-              startUpCommand: 'python -m streamlit run Main.py --server.port 8000 --server.enableCORS false'
+  - job: DeployJob  # "deployment" durch "job" ersetzt
+    # Die Zeile "environment: 'development'" wurde gelöscht
+    steps:
+    - download: current # Wichtig: Lade das Artefakt aus dem Build-Stage herunter
+      artifact: drop
+    - task: AzureWebApp@1
+      inputs:
+        azureSubscription: 'DEIN_SERVICE_CONNECTION_NAME' # Prüfe ob dieser Name stimmt!
+        appType: 'webAppLinux'
+        appName: '$(webAppName)'
+        package: '$(Pipeline.Workspace)/drop/app.zip'
+        runtimeStack: 'PYTHON|$(python.version)'
+        startUpCommand: 'python -m streamlit run Main.py --server.port 8000 --server.enableCORS false'
