--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,56 +1,40 @@
+# Python package
+# Create and test a Python package on multiple Python versions.
+# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/python
+
 trigger:
 - master
 
 pool:
   vmImage: ubuntu-latest
+strategy:
+  matrix:
+    Python310:
+      python.version: '3.12'
 
-variables:
-  python.version: '3.12'
-  # Hier den Namen deiner Web App eintragen:
-  webAppName: 'WA-PD-NE-CMES-REPORTING-SUPERDEPOTUI-dev'
-  azureServiceConnection: 'DEIN_SERVICE_CONNECTION_NAME'
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '$(python.version)'
+  displayName: 'Use Python $(python.version)'
 
+- script: |
+    python -m venv antenv
+    source antenv/bin/activate
+    python -m pip install --upgrade pip
+    pip install --target="./antenv/lib/python3.10/site-packages" -r ./requirements.txt
+  displayName: 'Install dependencies'
 
-
-
-stages:
-- stage: Build
-  jobs:
-  - job: BuildJob
-    steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '$(python.version)'
-      displayName: 'Python $(python.version) vorbereiten'
-
-    - script: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-      displayName: 'Dependencies installieren'
-
-    - task: ArchiveFiles@2
-      inputs:
-        rootFolderOrFile: '$(Build.SourcesDirectory)'
-        includeRootFolder: false
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
-
-    - publish: $(Build.ArtifactStagingDirectory)/app.zip
-      artifact: drop
-- stage: Deploy
-  dependsOn: Build
-  condition: succeeded()
-  jobs:
-  - job: DeployJob  # "deployment" durch "job" ersetzt
-    # Die Zeile "environment: 'development'" wurde gelöscht
-    steps:
-    - download: current # Wichtig: Lade das Artefakt aus dem Build-Stage herunter
-      artifact: drop
-    - task: AzureWebApp@1
-      inputs:
-        azureSubscription: 'DEIN_SERVICE_CONNECTION_NAME' # Prüfe ob dieser Name stimmt!
-        appType: 'webAppLinux'
-        appName: '$(webAppName)'
-        package: '$(Pipeline.Workspace)/drop/app.zip'
-        runtimeStack: 'PYTHON|$(python.version)'
-        startUpCommand: 'python -m streamlit run Main.py --server.port 8000 --server.enableCORS false'
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.SourcesDirectory)'
+    includeRootFolder: false
+    archivetype: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: true # (no value); this input is optional
+    
+- publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
+  displayName: 'Upload Package'
+  artifact: drop
